tests/Should_succeed/6_Context/07_FunctionArgNotModified.decaf
class Test {
	void m1(int a){
		a = a+2;
	}
	void main(){
		int b;
		b = 42;
		m1(b);
		WriteInt(b);
		WriteString("=42");
		WriteString("\n");
	}
}