tests/Should_fail/6_Context/01_AccessInFunction.decaf
class Test {
	void m1(){
		a = 2;
		WriteString("0=1");
		WriteString("\n");
	}
	void main(){
		int a;
		a = 5;
		m1();
	}
}